fixed resizing, and small offset problem with the end of the scrollbar

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -30,12 +30,13 @@ body {
   grid-column: 1 / 3;
   background-color: #333;
   border-radius: 1em;
+  width: 100%;
+  height: 16px;
+  position: relative;
 }
 
 #scrollbar {
-  position: relative;
-  left: 100px;
-  width: 20vw;
+  position: absolute;
   /* Width and left is configured by the zoomfactor! */
   height: 16px;
   font-size: 16px;
